# mcp-review

./: README.md  install.sh  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/commands/: iterate.md  review.md
mcp_review/: server.py
